# samujalphukan

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  vercel.json
locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt-BR.json  zh-CN.json
src/: app.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/contact/: page.tsx
src/app/work/: page.tsx
src/components/: Experience.tsx  Footer.tsx  Hamburger.tsx  Hero.tsx  MobileMenu.tsx  Navbar.tsx  NavbarWrapper.tsx  hamburger.css  hero.rs  lang_switcher.rs  mod.rs  navbar.rs
src/i18n/: mod.rs
src/pages/: contact.rs  home.rs  mod.rs  work.rs
style/: tailwind.css
