[package]
name = "samujalphukan-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
console_error_panic_hook = "0.1.7"
leptos_router = "0.7.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Element", "HtmlElement", "Window", "Document", "MouseEvent", "Storage"] }
wasm-bindgen = "0.2"
